; ModuleID = '/home/carl/AnghaBench/postgres/src/timezone/extr_localtime.c_init_ttinfo.c'
source_filename = "/home/carl/AnghaBench/postgres/src/timezone/extr_localtime.c_init_ttinfo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ttinfo = type { i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ttinfo*, i32, i32, i32)* @init_ttinfo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_ttinfo(%struct.ttinfo* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.ttinfo*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.ttinfo* %0, %struct.ttinfo** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %6, align 4
  %10 = load %struct.ttinfo*, %struct.ttinfo** %5, align 8
  %11 = getelementptr inbounds %struct.ttinfo, %struct.ttinfo* %10, i32 0, i32 4
  store i32 %9, i32* %11, align 4
  %12 = load i32, i32* %7, align 4
  %13 = load %struct.ttinfo*, %struct.ttinfo** %5, align 8
  %14 = getelementptr inbounds %struct.ttinfo, %struct.ttinfo* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  %15 = load i32, i32* %8, align 4
  %16 = load %struct.ttinfo*, %struct.ttinfo** %5, align 8
  %17 = getelementptr inbounds %struct.ttinfo, %struct.ttinfo* %16, i32 0, i32 1
  store i32 %15, i32* %17, align 4
  %18 = load %struct.ttinfo*, %struct.ttinfo** %5, align 8
  %19 = getelementptr inbounds %struct.ttinfo, %struct.ttinfo* %18, i32 0, i32 2
  store i32 0, i32* %19, align 4
  %20 = load %struct.ttinfo*, %struct.ttinfo** %5, align 8
  %21 = getelementptr inbounds %struct.ttinfo, %struct.ttinfo* %20, i32 0, i32 3
  store i32 0, i32* %21, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
